force-app/main/default/objects/Loan_Repayment_Schedule__c/Loan_Repayment_Schedule__c.object-meta.xml
<CustomObject>
    <label>Loan Repayment Schedule</label>
    <nameField>
        <displayFormat>LRP-{0000000000}</displayFormat>
        <label>Loan Repayment Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Repayment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>