force-app/main/default/objects/Loan_Repayment_Schedule__c/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <label>Fees</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>