force-app/main/default/objects/Loan_Repayment_Schedule__c/fields/Loan_Request__c.field-meta.xml
<CustomField>
    <fullName>Loan_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Loan  Request</label>
    <referenceTo>Loan_Request__c</referenceTo>
    <relationshipLabel>Loan Repayment Schedules</relationshipLabel>
    <relationshipName>Loan_Repayment_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>